# MineBash

./: .gitignore  CMakeLists.txt  README.md  main.cpp
CartaoSD/: README.md
CartaoSD/src/: CMakeLists.txt  CartaoSD.cpp  CartaoSD.h  ControladorSpiCartao.cpp  ControladorSpiCartao.h  DriverCartaoSd.cpp  DriverCartaoSd.h  FatFsPort.cpp  FatFsPort.h  FatFsTempo.cpp
PortaSerial/: README.md
src/: mineBash.cpp  mineBash.h
